<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mad.homeworkgroup20.inclass13.LoginActivity">

    <EditText
        android:id="@+id/etEmail1"
        android:layout_width="292dp"
        android:layout_height="61dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:hint="@string/editTextEmail1"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="100dp"
        android:layout_height="47dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="52dp"
        android:text="@string/buttonLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPass" />

    <Button
        android:id="@+id/buttonSignUp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/buttonNewUser"
        app:layout_constraintStart_toStartOf="@+id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:contentDescription="Password"
        android:ems="10"
        android:hint="@string/editTextPass2"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail1" />

</android.support.constraint.ConstraintLayout>
